<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="Home"/>

    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/map"
        android:title="Map"/>

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/profile"
        android:title="Profile"/>

</menu>
