<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignInFragment">

    <!-- Sign In Button -->
    <Button
        android:id="@+id/signInButton"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:text="@string/sign_in_button"
        android:textSize="24sp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- TextView (Positioned Below the Button) -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_Title"
        android:layout_marginTop="20dp"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInButton"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_in_body"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"/>

</androidx.constraintlayout.widget.ConstraintLayout>